--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     },
     "dependencies": {
         "axios": "^0.21.1",
+        "chart.js": "2",
+        "chartjs": "^0.3.24",
         "core-js": "^3.6.5",
         "element-ui": "^2.15.1",
         "firebase": "^8.4.1",
         "vue": "^2.6.11",
+        "vue-chartjs": "^3.5.1",
         "vue-cookie": "^1.1.4",
+        "vue-i18n": "^8.24.4",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
     },
